Fix the typo (tuuple->tuple).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,6 @@ add_subdirectory(benchmark)
 add_executable(sortbench algorithms.bench.cpp)
 target_link_libraries(sortbench benchmark::benchmark)
 add_executable(filesize_int filesize_int.cpp)
-add_executable(filesize_tuuple filesize_tuple.cpp)
+add_executable(filesize_tuple filesize_tuple.cpp)
 add_executable(filesize_pdq_int filesize_pdq_int.cpp)
 add_executable(filesize_pdq_tuple filesize_pdq_tuple.cpp)
